tests/NormalTests/paczka1/fuzzy1/48201107.err
Error in line 3: m0R S268 32,0
Error in line 4: m0R A987 88,5
Error in line 32: fmkM S733 0,1
